--- a/HTTP_Requests_for_Humans.ipynb
+++ b/HTTP_Requests_for_Humans.ipynb
@@ -43,7 +43,7 @@
       "metadata": {
         "id": "0KeyRlYQnFUq",
         "colab_type": "code",
-        "outputId": "e1ed14e4-8f13-410e-a1e0-998a1c1e5183",
+        "outputId": "54592437-6887-4d23-adaf-1799e69f03af",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -83,7 +83,7 @@
       "metadata": {
         "id": "WCIP4PRDpe_q",
         "colab_type": "code",
-        "outputId": "8207a7a0-4a5c-4514-8332-f1d57abdb735",
+        "outputId": "38c729e1-f08e-4ed0-b9bd-630683c58c2d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -162,7 +162,7 @@
       "metadata": {
         "id": "elPXAb11x3RU",
         "colab_type": "code",
-        "outputId": "25fe3c24-6a16-4a45-ae74-b041d9797f8c",
+        "outputId": "7ab0044f-57de-4a8a-9f25-10bff94cc856",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -202,7 +202,7 @@
       "metadata": {
         "id": "Uce7N9bCymq4",
         "colab_type": "code",
-        "outputId": "4c0b1c3d-e7e8-43df-d68e-85a198e0b95f",
+        "outputId": "8ce4195c-de6c-4129-8600-08c1695c3a56",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -246,7 +246,7 @@
       "metadata": {
         "id": "_zkWd9Ls16rB",
         "colab_type": "code",
-        "outputId": "dcd26751-4cf6-4477-da2d-c9c677eabd97",
+        "outputId": "7c8689ee-81f0-421c-f2a8-6f58af4be7e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -284,7 +284,7 @@
       "metadata": {
         "id": "hVebqkdR9Vzr",
         "colab_type": "code",
-        "outputId": "2a06bb35-77ef-4abc-f71c-8f4d7ff05572",
+        "outputId": "c6fd8b35-d33a-400d-cbe2-922b00affb5b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -338,7 +338,7 @@
       "metadata": {
         "id": "Hq3p3UtyBIW-",
         "colab_type": "code",
-        "outputId": "6b2e91e5-9196-49bf-8c33-c23cca20f83c",
+        "outputId": "12d52b95-2301-4343-a8dc-71b932d97656",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -369,7 +369,7 @@
       "metadata": {
         "id": "_yQypRyFBiZn",
         "colab_type": "code",
-        "outputId": "f33f62c5-6c66-498b-bf41-621886c82e02",
+        "outputId": "3d12f12f-7389-4cd0-aa67-7f62de0eb000",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -409,7 +409,7 @@
       "metadata": {
         "id": "2bwpo7nVCQnL",
         "colab_type": "code",
-        "outputId": "63d390dc-0a4c-4128-b539-d8233c0663ef",
+        "outputId": "05088655-28f1-4743-901c-e01684066b9e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -454,7 +454,7 @@
       "metadata": {
         "id": "SEiZH3f2EQTL",
         "colab_type": "code",
-        "outputId": "f51dffa9-175d-44d7-8782-98aac6ea9fac",
+        "outputId": "e5ce2b0c-5787-4119-a209-3181221543b2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 585
@@ -538,7 +538,7 @@
       "metadata": {
         "id": "IA-pTr1DafPb",
         "colab_type": "code",
-        "outputId": "8b6ebf7d-ad2a-4b7b-fc23-37259f831d40",
+        "outputId": "c598b343-d0f7-42cd-ae51-4087925d690a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -553,7 +553,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'Date': 'Mon, 23 Dec 2019 14:48:22 GMT', 'Content-Type': 'application/json; charset=utf-8', 'Transfer-Encoding': 'chunked', 'Server': 'GitHub.com', 'Status': '200 OK', 'X-RateLimit-Limit': '60', 'X-RateLimit-Remaining': '55', 'X-RateLimit-Reset': '1577116101', 'Cache-Control': 'public, max-age=60, s-maxage=60', 'Vary': 'Accept, Accept-Encoding', 'ETag': 'W/\"307bf49b7e1b8e6fe4ef622d609665e1\"', 'X-GitHub-Media-Type': 'github.v3; format=json', 'Access-Control-Expose-Headers': 'ETag, Link, Location, Retry-After, X-GitHub-OTP, X-RateLimit-Limit, X-RateLimit-Remaining, X-RateLimit-Reset, X-OAuth-Scopes, X-Accepted-OAuth-Scopes, X-Poll-Interval, X-GitHub-Media-Type', 'Access-Control-Allow-Origin': '*', 'Strict-Transport-Security': 'max-age=31536000; includeSubdomains; preload', 'X-Frame-Options': 'deny', 'X-Content-Type-Options': 'nosniff', 'X-XSS-Protection': '1; mode=block', 'Referrer-Policy': 'origin-when-cross-origin, strict-origin-when-cross-origin', 'Content-Security-Policy': \"default-src 'none'\", 'Content-Encoding': 'gzip', 'X-GitHub-Request-Id': 'A03C:3842E:A84FB38:C8701EF:5E00D3B6'}"
+              "{'Server': 'GitHub.com', 'Date': 'Thu, 26 Dec 2019 15:11:27 GMT', 'Content-Type': 'application/json; charset=utf-8', 'Transfer-Encoding': 'chunked', 'Status': '200 OK', 'X-RateLimit-Limit': '60', 'X-RateLimit-Remaining': '55', 'X-RateLimit-Reset': '1577376686', 'Cache-Control': 'public, max-age=60, s-maxage=60', 'Vary': 'Accept', 'ETag': 'W/\"307bf49b7e1b8e6fe4ef622d609665e1\"', 'X-GitHub-Media-Type': 'github.v3; format=json', 'Access-Control-Expose-Headers': 'ETag, Link, Location, Retry-After, X-GitHub-OTP, X-RateLimit-Limit, X-RateLimit-Remaining, X-RateLimit-Reset, X-OAuth-Scopes, X-Accepted-OAuth-Scopes, X-Poll-Interval, X-GitHub-Media-Type', 'Access-Control-Allow-Origin': '*', 'Strict-Transport-Security': 'max-age=31536000; includeSubdomains; preload', 'X-Frame-Options': 'deny', 'X-Content-Type-Options': 'nosniff', 'X-XSS-Protection': '1; mode=block', 'Referrer-Policy': 'origin-when-cross-origin, strict-origin-when-cross-origin', 'Content-Security-Policy': \"default-src 'none'\", 'Content-Encoding': 'gzip', 'X-GitHub-Request-Id': 'E2FA:1E06:1E6968:45D5E0:5E04CD9F'}"
             ]
           },
           "metadata": {
@@ -568,7 +568,7 @@
       "metadata": {
         "id": "zxMe9X_h8Kl7",
         "colab_type": "code",
-        "outputId": "cc86c8cc-071f-4626-d88c-d5613da12337",
+        "outputId": "c72ad8a7-08f2-43e0-b223-43a8253ee13e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -598,7 +598,7 @@
       "metadata": {
         "id": "bLTNPdFHdsqz",
         "colab_type": "code",
-        "outputId": "98e0a076-cfd5-400c-804f-6f66e84c3682",
+        "outputId": "19d01992-1df5-4c11-b047-0feb54c64be3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -652,11 +652,11 @@
       "metadata": {
         "id": "sTd3nfOlUK0c",
         "colab_type": "code",
+        "outputId": "89a56fc0-a3ba-4ec6-f7d1-997ccb8e1dd4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "38837d5a-c962-4b71-c281-43d5b180f82f"
+        }
       },
       "source": [
         "import requests\n",
@@ -666,7 +666,7 @@
         "# return sever status\n",
         "reponse.status_code"
       ],
-      "execution_count": 25,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -678,7 +678,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 15
         }
       ]
     },
@@ -687,17 +687,17 @@
       "metadata": {
         "id": "eh09Ba2oVfvo",
         "colab_type": "code",
+        "outputId": "d620df66-5da6-42ed-896f-4b8082bda855",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "235c5a95-63f0-4b29-ef64-c896c7898506"
+        }
       },
       "source": [
         "# you can pass values as Bytes\n",
         "requests.get('https://api.github.com/search/repositories', params=b'q=requests+language:python')"
       ],
-      "execution_count": 18,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -709,7 +709,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 16
         }
       ]
     },
@@ -730,11 +730,11 @@
       "metadata": {
         "id": "H6FdfFHWYskN",
         "colab_type": "code",
+        "outputId": "0cbc693c-95dc-41a1-de48-1c12b876293b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "14490225-1601-4c48-9a95-3a2c8e483f18"
+        }
       },
       "source": [
         "import requests\n",
@@ -749,7 +749,7 @@
         "repository = json_response['items'][0]\n",
         "print(f'text matches: {repository[\"text_matches\"]}') "
       ],
-      "execution_count": 28,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -791,11 +791,11 @@
       "metadata": {
         "id": "24kRUR-Jc0ol",
         "colab_type": "code",
+        "outputId": "600383c8-a460-409d-b020-125089037b34",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c91817cf-216e-43bb-c46d-2bdef65433ae"
+        }
       },
       "source": [
         "requests.post('https://httpbin.org/post', data={'key':'value'})\n",
@@ -805,7 +805,7 @@
         "requests.patch('https://httpbin.org/patch', data={'key':'value'})\n",
         "requests.options('https://httpbin.org/get')"
       ],
-      "execution_count": 34,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -817,7 +817,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 18
         }
       ]
     },
@@ -826,17 +826,17 @@
       "metadata": {
         "id": "JafARzI-evPc",
         "colab_type": "code",
+        "outputId": "5a602784-8d29-4396-a773-47f0c3cc185a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "6f975f6c-f1d2-450f-ee52-6bbe16aa1edb"
+        }
       },
       "source": [
         "response = requests.head('https://httpbin.org/get')\n",
         "response.headers['content-type']"
       ],
-      "execution_count": 41,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -848,7 +848,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 19
         }
       ]
     },
@@ -857,18 +857,18 @@
       "metadata": {
         "id": "0X1ZztZ3fqHO",
         "colab_type": "code",
+        "outputId": "13084720-5074-40ad-a9ff-44c75091e9d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0f1d465a-2e70-4248-fcc4-409ef75f8faf"
+        }
       },
       "source": [
         "response = requests.delete('https://httpbin.org/delete')\n",
         "json_response = response.json()\n",
         "json_response['args']"
       ],
-      "execution_count": 47,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -880,7 +880,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 20
         }
       ]
     },
@@ -906,16 +906,16 @@
       "metadata": {
         "id": "0G5KvDY4kvy-",
         "colab_type": "code",
+        "outputId": "784b68f3-edee-428c-dc5f-c5d64de59feb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "76ddd106-dfbe-4a36-aa8f-a5bc48077779"
+        }
       },
       "source": [
         "requests.post('https://httpbin.org/post', data={'key':'value'})"
       ],
-      "execution_count": 48,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -927,7 +927,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 48
+          "execution_count": 21
         }
       ]
     },
@@ -936,16 +936,16 @@
       "metadata": {
         "id": "YKYfxkMOlCBV",
         "colab_type": "code",
+        "outputId": "9203cb20-3078-4353-e307-7503abc76b5b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0c9a9483-2071-4370-a337-d0fbca4835d3"
+        }
       },
       "source": [
         "requests.post('https://httpbin.org/post', data=[('key', 'value')])"
       ],
-      "execution_count": 49,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -957,7 +957,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 49
+          "execution_count": 22
         }
       ]
     },
@@ -976,18 +976,18 @@
       "metadata": {
         "id": "w8tyUxTXmCOf",
         "colab_type": "code",
+        "outputId": "25fb9a4e-57ed-4b77-d0d2-6b7eeec6251c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c9328cc8-ff14-4106-e756-275ab26a8ad9"
+        }
       },
       "source": [
         "response = requests.post('https://httpbin.org/post', json={'key':'value'})\n",
         "json_response = response.json()\n",
         "json_response['data']"
       ],
-      "execution_count": 50,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -999,7 +999,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 50
+          "execution_count": 23
         }
       ]
     },
@@ -1008,16 +1008,16 @@
       "metadata": {
         "id": "6MBN54Rdmdub",
         "colab_type": "code",
+        "outputId": "dd5485e6-c1b1-437d-f98e-6a0b90e0ae4c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "9c25f2f4-567d-4302-ef6e-4ec10096b002"
+        }
       },
       "source": [
         "json_response['headers']['Content-Type']"
       ],
-      "execution_count": 51,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1029,7 +1029,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 51
+          "execution_count": 24
         }
       ]
     },
@@ -1062,17 +1062,17 @@
       "metadata": {
         "id": "CDgqLAwrpvZn",
         "colab_type": "code",
+        "outputId": "80c26ca9-e726-4ae8-aea7-afd627275a5e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0f8057b6-8a77-4293-f961-db35d1370015"
+        }
       },
       "source": [
         "response = requests.post('https://httpbin.org/post', json={'key':'value'})\n",
         "response.request.headers['Content-type']"
       ],
-      "execution_count": 55,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1084,7 +1084,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 55
+          "execution_count": 25
         }
       ]
     },
@@ -1093,16 +1093,16 @@
       "metadata": {
         "id": "4jBcPbE_qVMI",
         "colab_type": "code",
+        "outputId": "e6f85524-e6f1-4eb4-fddc-218a4663771f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "bd12c730-769b-4360-821a-4bcd82d2ff81"
+        }
       },
       "source": [
         "response.request.url"
       ],
-      "execution_count": 53,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1114,7 +1114,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 53
+          "execution_count": 26
         }
       ]
     },
@@ -1123,16 +1123,16 @@
       "metadata": {
         "id": "gwRGF53zqnfB",
         "colab_type": "code",
+        "outputId": "81392329-bb2b-4d2b-d329-be80e72556f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "caf9d3eb-d106-499a-e389-3572af00d1fe"
+        }
       },
       "source": [
         "response.request.body"
       ],
-      "execution_count": 56,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1144,8 +1144,37 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 56
+          "execution_count": 27
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "49SAoFGRwR0R",
+        "colab_type": "text"
+      },
+      "source": [
+        "Inspecting the rquest gives tyou access to all kinds of information about the request being made:\n",
+        "\n",
+        "*   Payload\n",
+        "*   URL\n",
+        "*   Headers\n",
+        "*   Authenication and more\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cb4CarJhxQLq",
+        "colab_type": "text"
+      },
+      "source": [
+        "#**API Authentication**"
       ]
     }
   ]
