--- a/Python_SQLite3_Example_Data_Engineering.ipynb
+++ b/Python_SQLite3_Example_Data_Engineering.ipynb
@@ -32,7 +32,7 @@
       },
       "source": [
         "#**Data Engineering** \n",
-        "##**Relational vs Non-Relational Databases**\n",
+        "#**Relational vs Non-Relational Databases**\n",
         "\n",
         "![alt text](https://ulriklyngs.com/sites/default/files/styles/final-blog-image-style/public/desat_chalkb.jpg?itok=7gumzPT8)"
       ]
@@ -84,7 +84,7 @@
       "metadata": {
         "id": "pjhMW3yLc0sC",
         "colab_type": "code",
-        "outputId": "6e98c5a3-c216-45f9-aedf-0bdcc61b4c8c",
+        "outputId": "9dd74005-8a90-4147-9afa-8dffa0116076",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -109,19 +109,19 @@
         "  CONSTRAINT itemid \n",
         "      FOREIGN KEY (itemid) REFERENCES Item(id) )''')"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<sqlite3.Cursor at 0x7f266b045730>"
+              "<sqlite3.Cursor at 0x7f5358307dc0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 8
         }
       ]
     },
@@ -140,7 +140,7 @@
       "metadata": {
         "id": "rkGEx3-gfgMR",
         "colab_type": "code",
-        "outputId": "6c7f1fc1-817f-4505-c4ac-ee4e452f1e9b",
+        "outputId": "be622fe2-82a4-43f0-9d11-02af30329450",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -162,19 +162,19 @@
         "                (2, 3, 180.00),\n",
         "                (3, 2, 11.23);''')  # Discounted Price\n"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<sqlite3.Cursor at 0x7f266b045730>"
+              "<sqlite3.Cursor at 0x7f5358307dc0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 9
         }
       ]
     },
@@ -199,7 +199,7 @@
       "metadata": {
         "id": "L0RSmg27kBZT",
         "colab_type": "code",
-        "outputId": "d7c0348f-6ea6-4d3a-ccbb-4a9c968b6f6e",
+        "outputId": "cc10bbf8-b47b-4960-a3bd-6ded7269dfc5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -209,7 +209,7 @@
         "cur.execute('''SELECT itemid, AVG(price) FROM Boughtitem GROUP BY itemid''')\n",
         "print(cur.fetchall())"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +237,7 @@
       "metadata": {
         "id": "7W9mVPRZogXX",
         "colab_type": "code",
-        "outputId": "7bea1a64-b235-4ce0-fa06-fd29c4c2b82a",
+        "outputId": "3c499ea6-ce26-4ea6-9558-9ce726583a81",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -250,7 +250,7 @@
         "\n",
         "print(cur.fetchall())"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,7 +276,7 @@
       "metadata": {
         "id": "CgiPOsV7qcOi",
         "colab_type": "code",
-        "outputId": "f3388b3b-867e-4ba3-c26d-9a4dbce415ad",
+        "outputId": "509e14b0-04d1-4307-fa33-e6c444d3b94e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -289,7 +289,7 @@
         "\n",
         "print(cur.fetchall())"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -343,11 +343,11 @@
       "metadata": {
         "id": "3XUGx-cODzIA",
         "colab_type": "code",
+        "outputId": "2302dc13-318c-4e79-f429-83970203fde8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "85623fa4-de22-48eb-ac11-072dc3787752"
+        }
       },
       "source": [
         "cur.execute('''EXPLAIN QUERY PLAN SELECT customer.firstname, item.title,\n",
@@ -357,7 +357,7 @@
         "\n",
         "print(cur.fetchall())"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -384,6 +384,247 @@
         "SEARCH TABLE Item AS item USING INTEGER PRIMARY KEY (rowid=?)\n",
         "\n",
         "**NOTE:** the fetch statement in the python code only returns the explanation, **NOT THE RESULTS!**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4T43xeYEGWh0",
+        "colab_type": "text"
+      },
+      "source": [
+        "#**Non-Relational databases** (Exp...NoSQL)\n",
+        "\n",
+        "In the above section,  we laid out the differences between relational vs non-relational databases an used SQLite with python .  Now lets focus on NoSQL. We will use Mongo DB as example and use the same data as above to see the differences (*Laptop wont allow my connections thru FW, so we will just discuss*)\n",
+        "\n",
+        "**Mongo DB is a document based No-SQL database and is Very Scalable**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uPdL7tqJGsfL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import pymongo  # mongo Db comes pre-installed in Google COLAB\n",
+        "\n",
+        "client = pymongo.MongoClient(\"mongodb://localhost:27017/\")\n",
+        "# NOTE: this database wont be created until it is populated with data\n",
+        "\n",
+        "db = client[\"example_database\"]\n",
+        "\n",
+        "customers = db[\"customers\"]\n",
+        "items = db[\"items\"]\n",
+        "\n",
+        "customers_data = [{ \"firstname\": \"Bob\", \"lastname\": \"Adams\"},\n",
+        "                  { \"firstname\": \"Amy\", \"lastname\": \"Smith\"},\n",
+        "                  { \"firstname\": \"Rob\", \"lastname\": \"Bennet\"},]\n",
+        "items_data = [{ \"title\": \"USB\", \"price\": 10.2},\n",
+        "              { \"title\": \"Mouse\", \"price\": 12.23},\n",
+        "              { \"title\": \"Monitor\", \"price\": 199.99},]\n",
+        "\n",
+        "customers.insert_many(customers_data)\n",
+        "items.insert_many(items_data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5de6vGVuDaUu",
+        "colab_type": "text"
+      },
+      "source": [
+        "#**NoSQL vs SQL**\n",
+        "\n",
+        "Long term storage solutions\n",
+        "\n",
+        "If you have a constantly changing schema,  such as finanncial regulatory information (GLBA SOX etc.)then No SQL can modify the records, and nest related information . Juat imagine the number of joins you would need to do in SQL if you had Eight orders of nesting.  Now if your goal is to \"run reports\" and extract information form the financial data, and ife conclusions? - in this case you would need to run complex queries which SQL tends to be faster doing.  so depends on what you need to get done. \n",
+        "\n",
+        "NOTE: SQL databases (PostgreSQL) has relases a feature that allows \"querable JSON data\" to be inserted as part of a record. Speed may be a concerns with this \n",
+        "\n",
+        "**Note: it is faster to query unstructured data from no-SQL Db than it is to query JSON fields from a JSON type column in PostgreSQL**. \n",
+        "\n",
+        "Speed isnt the only metric that matters. You also need to look at things such as **Transcations, Atomicity, durability anmd scalability**.  Transactions are important for financial applications.\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   **Elastic Search**: highly efficient in Text searches. Document based database to crate a powerful searh tool.\n",
+        "*   **Newt DB**: combines ZODB and PostgreSQL JSON feature to create a Python friendly No-SQL DB\n",
+        "*   **Influx DB** : time seried Db to store events. \n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v9EGfHXYVnRP",
+        "colab_type": "text"
+      },
+      "source": [
+        "#**Cache databases**\n",
+        "\n",
+        "a cache database is a very fast, short term storage solution for shorth lived structed and unstructured data. It can be partinioned and scaled according to you specific needs and requirements. typically smaller in size than your main DB and becuase of this your cache databse normally resides in memory bypassoing the need to read from disk. \n",
+        "\n",
+        "the normally live alongside your main SQL and No-SQL databases with the goal of alleviate load and speed response times\n",
+        "###**REDIS  Example**\n",
+        "\n",
+        "If you ve ever used python dictionaries, then REDIS follows the same structure. Is a key-value store where you can SET and GET just like a python DICT"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cmBu6CuxohUx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pip install redis"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JPgXGOy7oqdp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import redis\n",
+        "from datetime import timedelta"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0vEm2DtXor3_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# in a real web application, configuration is obtained via settings or utils \n",
+        "r = redis.Redis()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yFqUoCHOpJnb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Assume this is a getter handling a request \n",
+        "def get_name(request, *args, **kwargs):\n",
+        "  id = request.get('id')\n",
+        "  if id in r:\n",
+        "    return r.get(id)  # Assume we have an {id: name} store\n",
+        "  else:\n",
+        "    # get some data from the main DB here, we assume we already did it\n",
+        "    name = 'Bob'\n",
+        "    # set the valule in the cache database, with expiration time\n",
+        "    r.setex(id, timedelta(minutes=60), value=name)\n",
+        "    return name"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Qvqe7wm4rFXW",
+        "colab_type": "text"
+      },
+      "source": [
+        "#**Design Patterns and ETL Concepts**\n",
+        "\n",
+        "In larfge applications, you will oftern use mor ethan on type of database. I fact, its possibloe to utilize PostgreSQL, MongoDB and Redis all within one application. One challenging problem is state changes betweeen databases. this exposes the developer to issue of consistency . Conside rthe below example:\n",
+        "\n",
+        "1. A value in database #1 is updated\n",
+        "2. that same value in database #2. Is NOT updated. \n",
+        "3. A query is run on database #2\n",
+        "\n",
+        "Now we have outdated results. The result returned from databse #2 wont reflect the updated data from database #1. This can happend with any two databases. **This is especially common is the main database is NoSQL**. Exp MongoDB. and the data is bring transformed into a SQL database (sqlite) for query purposes.\n",
+        "\n",
+        "Databses have \"backroun-workers\" to tackle such issues.   These workers **EXTRACT** data from one database, **TRANSFORM** it in some way and then **LOAD** it into the target database.   When converting froim the NoSQL databse to SQL database, the ETL process takes th following steps:\n",
+        "\n",
+        "1. **EXTRACT**:  there is a MONGO Db trigger whenever a record is created/updated and so on. A callback functioned is called \"Asynchronously\" on a seprate thread. \n",
+        "\n",
+        "2. **TRANSFORM**: Parts of the record are extracted, normalized, and put into the correct data structure \"Row\"to be inserted into SQL.\n",
+        "\n",
+        "3. **LOAD**: the SQL database is updated in batches or as a single record for High-Volume writes\n",
+        "\n",
+        "this workflow is quite common for financial, gaming and reporting applications. In these cases, the constantly changing schema requires a NoSQL database, but reporting, analysis and aggregation requires a SQL database. \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KLxip6tVOt9y",
+        "colab_type": "text"
+      },
+      "source": [
+        "#**ETL Challenges**\n",
+        "\n",
+        "There are several challenging concepts in ETL:\n",
+        "\n",
+        "1. **Big-Data**\n",
+        "2. **Stateful problems**\n",
+        "3. **Asynchronous Worker**s\n",
+        "4. **Type-Matching**\n",
+        "\n",
+        "and the list goes on. However since the steps in ETL proxess are well-defined and logical, the data and backend engineers will typically worry more about performance and availability rather than implementation. \n",
+        "\n",
+        "If you application is writing thousands of records per second to MongoDB, then your ETL worker neds to keep up with transforming, loading nd delivering the data to the user in  requested form. Speed and latency can become an issue.   Typically these worker will be written in fast languages. You can use compiled code for the Transform step.you may want to consider. \n",
+        "\n",
+        "**NOTE**:  Multi-processing and separation of workers are other solutions \n",
+        "Consider Utilizing Numba (http://numba.pydata.org/) for CPU intensive functions.  \n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zhqUFUSqSpAW",
+        "colab_type": "text"
+      },
+      "source": [
+        "#**Design Patterns in Big-Data**\n",
+        "\n",
+        "when you have terabytes of data, you will need mutiple machine sot handle all of that data. a database aggregation funciton can be a very complex operation. How can you query, aggregate and make use of relatively big data in a efficient way?\n",
+        "\n",
+        "##**Apache Map-Reduce**\n",
+        "Introduced by apache foundation,  this follow the Map, Shuffle, Reduce workflow.  the idea is to map different data on separate machines (**Clusters**), then you can perform work on the data, grouped by a key, and finally aggregate thr data at the final stage. This workflow is still in use today, but has been fading recently in favor of **Apache Spark**  https://spark.apache.org/"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Csx9xdEdMyOx",
+        "colab_type": "text"
+      },
+      "source": [
+        "##**Common Aspects of ETL process and Big Data workflows**\n",
+        "\n",
+        "Both workflows ollow the Producer-Consumer pattern. A worker (The Producer) produces data of some  kind. and outputs to the pipeline. this pipeline can take many forms including networ messages and triggers. After the producer outputs the data , the consumer consumes and make use of the data.  these worker typically work in an asynchronous manne and executed via seperate proceses. \n",
+        "\n",
+        "the producer is like the **Extract** and **Transform** Steps in the above ETL process. Similarly in Big Data, the Mapper can be seen as the Producer, and the Reducer is effectively the consumer. This seperation of concerns is extremely important in the development and architecure design of applications  "
       ]
     }
   ]
