--- a/Python_Pandas.ipynb
+++ b/Python_Pandas.ipynb
@@ -6,7 +6,7 @@
       "name": "Python-Pandas.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPB388+foyTBgdmh5F3OGUg",
+      "authorship_tag": "ABX9TyM25WK4TsQsanS23J5//8h7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1298,6 +1298,25 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uISabxWosz6k",
+        "colab_type": "text"
+      },
+      "source": [
+        "You see a list of ALL the columns in your dataset and the type of data each column contains.  You can see three (3)**bold text** data types: **int64, float64**, and **object**.  Pandas use NumPy library to work with these types Later you will the more complex \"categorical\" data type which the Pandas library implements itself. \n",
+        "\n",
+        "\n",
+        "the **object** data type is a special one. The Object data type is a \"*catch-all*\" for columns that Pandas doesnt recognize as any pother specific data type.  In practice,  it means that the values in the columns are strings.\n",
+        "\n",
+        "although you can store arbitrary python objects in the object data type, there are some drawbacks\n",
+        "\n",
+        "*   Strange values in a object column can harm pandas performance\n",
+        "*   interoperaility with other libraries can also be affected. \n",
+        "\n"
       ]
     }
   ]
