--- a/Python_Pandas.ipynb
+++ b/Python_Pandas.ipynb
@@ -6,7 +6,7 @@
       "name": "Python-Pandas.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM25WK4TsQsanS23J5//8h7",
+      "authorship_tag": "ABX9TyM5r6NKM1pDdDr2rNMAgJMc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1243,7 +1243,7 @@
         "\n",
         "**Displaying the Data Types**\n",
         "\n",
-        "The first steps in getting to know your data is having a underatanding of the **data-types** it contains.  While you can place anything into a list, the columns of a **Dataframe** contain values of a specific data type. When you compare Pandas and pythin data structures you see that this behavior makes Pandas much faster.  \n",
+        "The first steps in getting to know your data is having a understanding of the **data-types** it contains.  While you can place anything into a list, the columns of a **Dataframe** contain values of a specific data type. When you compare Pandas and Python data structures you see that this behavior makes Pandas much faster.  \n",
         "\n",
         "you can display ALL columns and their data types with .info()"
       ]
@@ -1317,6 +1317,394 @@
         "*   Strange values in a object column can harm pandas performance\n",
         "*   interoperaility with other libraries can also be affected. \n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kGk3vd_qxAZB",
+        "colab_type": "text"
+      },
+      "source": [
+        "##**Showing Basic Statistics**\n",
+        "\n",
+        "Now that you've seen what datatypes are in your dataset, lets get an overview of the values in each column. You can do this with .describe()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mDPhv3H4x2rN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 297
+        },
+        "outputId": "2737e9fa-6393-4ff1-e0cc-2f6bd7d07000"
+      },
+      "source": [
+        "nba.describe()"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>gameorder</th>\n",
+              "      <th>_iscopy</th>\n",
+              "      <th>year_id</th>\n",
+              "      <th>seasongame</th>\n",
+              "      <th>is_playoffs</th>\n",
+              "      <th>pts</th>\n",
+              "      <th>elo_i</th>\n",
+              "      <th>elo_n</th>\n",
+              "      <th>win_equiv</th>\n",
+              "      <th>opp_pts</th>\n",
+              "      <th>opp_elo_i</th>\n",
+              "      <th>opp_elo_n</th>\n",
+              "      <th>forecast</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>126314.00</td>\n",
+              "      <td>126314.0</td>\n",
+              "      <td>126314.00</td>\n",
+              "      <td>126314.00</td>\n",
+              "      <td>126314.00</td>\n",
+              "      <td>126314.00</td>\n",
+              "      <td>126314.00</td>\n",
+              "      <td>126314.00</td>\n",
+              "      <td>126314.00</td>\n",
+              "      <td>126314.00</td>\n",
+              "      <td>126314.00</td>\n",
+              "      <td>126314.00</td>\n",
+              "      <td>126314.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>31579.00</td>\n",
+              "      <td>0.5</td>\n",
+              "      <td>1988.20</td>\n",
+              "      <td>43.53</td>\n",
+              "      <td>0.06</td>\n",
+              "      <td>102.73</td>\n",
+              "      <td>1495.24</td>\n",
+              "      <td>1495.24</td>\n",
+              "      <td>41.71</td>\n",
+              "      <td>102.73</td>\n",
+              "      <td>1495.24</td>\n",
+              "      <td>1495.24</td>\n",
+              "      <td>0.50</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>18231.93</td>\n",
+              "      <td>0.5</td>\n",
+              "      <td>17.58</td>\n",
+              "      <td>25.38</td>\n",
+              "      <td>0.24</td>\n",
+              "      <td>14.81</td>\n",
+              "      <td>112.14</td>\n",
+              "      <td>112.46</td>\n",
+              "      <td>10.63</td>\n",
+              "      <td>14.81</td>\n",
+              "      <td>112.14</td>\n",
+              "      <td>112.46</td>\n",
+              "      <td>0.22</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>1.00</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1947.00</td>\n",
+              "      <td>1.00</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>1091.64</td>\n",
+              "      <td>1085.77</td>\n",
+              "      <td>10.15</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>1091.64</td>\n",
+              "      <td>1085.77</td>\n",
+              "      <td>0.02</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>15790.00</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1975.00</td>\n",
+              "      <td>22.00</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>93.00</td>\n",
+              "      <td>1417.24</td>\n",
+              "      <td>1416.99</td>\n",
+              "      <td>34.10</td>\n",
+              "      <td>93.00</td>\n",
+              "      <td>1417.24</td>\n",
+              "      <td>1416.99</td>\n",
+              "      <td>0.33</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>31579.00</td>\n",
+              "      <td>0.5</td>\n",
+              "      <td>1990.00</td>\n",
+              "      <td>43.00</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>103.00</td>\n",
+              "      <td>1500.95</td>\n",
+              "      <td>1500.95</td>\n",
+              "      <td>42.11</td>\n",
+              "      <td>103.00</td>\n",
+              "      <td>1500.95</td>\n",
+              "      <td>1500.95</td>\n",
+              "      <td>0.50</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>47368.00</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2003.00</td>\n",
+              "      <td>65.00</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>112.00</td>\n",
+              "      <td>1576.06</td>\n",
+              "      <td>1576.29</td>\n",
+              "      <td>49.64</td>\n",
+              "      <td>112.00</td>\n",
+              "      <td>1576.06</td>\n",
+              "      <td>1576.29</td>\n",
+              "      <td>0.67</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>63157.00</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2015.00</td>\n",
+              "      <td>108.00</td>\n",
+              "      <td>1.00</td>\n",
+              "      <td>186.00</td>\n",
+              "      <td>1853.10</td>\n",
+              "      <td>1853.10</td>\n",
+              "      <td>71.11</td>\n",
+              "      <td>186.00</td>\n",
+              "      <td>1853.10</td>\n",
+              "      <td>1853.10</td>\n",
+              "      <td>0.98</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       gameorder   _iscopy    year_id  seasongame  is_playoffs        pts  \\\n",
+              "count  126314.00  126314.0  126314.00   126314.00    126314.00  126314.00   \n",
+              "mean    31579.00       0.5    1988.20       43.53         0.06     102.73   \n",
+              "std     18231.93       0.5      17.58       25.38         0.24      14.81   \n",
+              "min         1.00       0.0    1947.00        1.00         0.00       0.00   \n",
+              "25%     15790.00       0.0    1975.00       22.00         0.00      93.00   \n",
+              "50%     31579.00       0.5    1990.00       43.00         0.00     103.00   \n",
+              "75%     47368.00       1.0    2003.00       65.00         0.00     112.00   \n",
+              "max     63157.00       1.0    2015.00      108.00         1.00     186.00   \n",
+              "\n",
+              "           elo_i      elo_n  win_equiv    opp_pts  opp_elo_i  opp_elo_n  \\\n",
+              "count  126314.00  126314.00  126314.00  126314.00  126314.00  126314.00   \n",
+              "mean     1495.24    1495.24      41.71     102.73    1495.24    1495.24   \n",
+              "std       112.14     112.46      10.63      14.81     112.14     112.46   \n",
+              "min      1091.64    1085.77      10.15       0.00    1091.64    1085.77   \n",
+              "25%      1417.24    1416.99      34.10      93.00    1417.24    1416.99   \n",
+              "50%      1500.95    1500.95      42.11     103.00    1500.95    1500.95   \n",
+              "75%      1576.06    1576.29      49.64     112.00    1576.06    1576.29   \n",
+              "max      1853.10    1853.10      71.11     186.00    1853.10    1853.10   \n",
+              "\n",
+              "        forecast  \n",
+              "count  126314.00  \n",
+              "mean        0.50  \n",
+              "std         0.22  \n",
+              "min         0.02  \n",
+              "25%         0.33  \n",
+              "50%         0.50  \n",
+              "75%         0.67  \n",
+              "max         0.98  "
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BmW6GDvEyGDk",
+        "colab_type": "text"
+      },
+      "source": [
+        "This function show you some more basic descriptive statisitics for all numerical columns. \n",
+        "\n",
+        "NOTE: .describe() only analyzes numerical columns by default. But you can provide other data types  if you use the \"include\" parameter"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wYikWZcqywmU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 173
+        },
+        "outputId": "048a4cc1-bcb6-4540-c1fd-f601c308c1b8"
+      },
+      "source": [
+        "import numpy as np\n",
+        "nba.describe(include=np.object)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>game_id</th>\n",
+              "      <th>lg_id</th>\n",
+              "      <th>date_game</th>\n",
+              "      <th>team_id</th>\n",
+              "      <th>fran_id</th>\n",
+              "      <th>opp_id</th>\n",
+              "      <th>opp_fran</th>\n",
+              "      <th>game_location</th>\n",
+              "      <th>game_result</th>\n",
+              "      <th>notes</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>126314</td>\n",
+              "      <td>126314</td>\n",
+              "      <td>126314</td>\n",
+              "      <td>126314</td>\n",
+              "      <td>126314</td>\n",
+              "      <td>126314</td>\n",
+              "      <td>126314</td>\n",
+              "      <td>126314</td>\n",
+              "      <td>126314</td>\n",
+              "      <td>5424</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>unique</th>\n",
+              "      <td>63157</td>\n",
+              "      <td>2</td>\n",
+              "      <td>12426</td>\n",
+              "      <td>104</td>\n",
+              "      <td>53</td>\n",
+              "      <td>104</td>\n",
+              "      <td>53</td>\n",
+              "      <td>3</td>\n",
+              "      <td>2</td>\n",
+              "      <td>231</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>top</th>\n",
+              "      <td>201211020ATL</td>\n",
+              "      <td>NBA</td>\n",
+              "      <td>1/2/2009</td>\n",
+              "      <td>BOS</td>\n",
+              "      <td>Lakers</td>\n",
+              "      <td>BOS</td>\n",
+              "      <td>Lakers</td>\n",
+              "      <td>A</td>\n",
+              "      <td>W</td>\n",
+              "      <td>at New York NY</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>freq</th>\n",
+              "      <td>2</td>\n",
+              "      <td>118016</td>\n",
+              "      <td>30</td>\n",
+              "      <td>5997</td>\n",
+              "      <td>6024</td>\n",
+              "      <td>5997</td>\n",
+              "      <td>6024</td>\n",
+              "      <td>63138</td>\n",
+              "      <td>63157</td>\n",
+              "      <td>440</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "             game_id   lg_id date_game team_id fran_id  opp_id opp_fran  \\\n",
+              "count         126314  126314    126314  126314  126314  126314   126314   \n",
+              "unique         63157       2     12426     104      53     104       53   \n",
+              "top     201211020ATL     NBA  1/2/2009     BOS  Lakers     BOS   Lakers   \n",
+              "freq               2  118016        30    5997    6024    5997     6024   \n",
+              "\n",
+              "       game_location game_result           notes  \n",
+              "count         126314      126314            5424  \n",
+              "unique             3           2             231  \n",
+              "top                A           W  at New York NY  \n",
+              "freq           63138       63157             440  "
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ro4cImrfzDL_",
+        "colab_type": "text"
+      },
+      "source": [
+        ".describe wont try to calculate a *MEAN or Standard Deviation* for the object columns, since they mostly include text strings but still will provide some descriptivie statistics"
       ]
     }
   ]
